--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 //apply plugin: 'com.android.library'
 apply plugin: 'AndResGuard'
+apply from: "../config.gradle"
 
 
 buildscript {
@@ -77,8 +78,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        manifestPlaceholders = [UNAME: uname,DNAME: dname,UPWD: pwd]
     }
 
     buildTypes {
